
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/title_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/app_name"/>
        <TextView
            android:id="@+id/appwidget_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_margin="8dp"
            android:contentDescription="@string/appwidget_text"
            android:text="@string/appwidget_text"
            android:textStyle="bold|italic" />
    </LinearLayout>
    <ImageView
        android:id="@+id/chords_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/chordsIV"
        android:adjustViewBounds="true"
        android:scaleType="fitXY" />
    <TextView
        android:id="@+id/appwidget_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:contentDescription="@string/select_song"
        android:text="@string/appwidget_text"
        />
</LinearLayout>
